# renaissance-cli

./: README.md  pyproject.toml
docs/: agent-friendly-cli.md  cli-dev-guide.md
src/renaissance_cli/: __init__.py  _app.py  _client.py  _config.py  _output.py
src/renaissance_cli/commands/: agent.py  ambient.py  artifact.py  auth.py  capability.py  doctor.py  eval.py  execute.py  metrics.py  pipeline.py  ralph.py  research.py  schedule.py  service.py  status.py  template.py
