[project]
name = "renaissance-cli"
version = "0.1.0"
description = "Renaissance platform CLI — pipeline, schedule, and sim control for any AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "typer[all]>=0.15",
]

[project.scripts]
ren = "renaissance_cli._app:main_entrypoint"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
